# aruco_marker_detection

./: README.md  cam_tf_broadcaster.yaml  real_dist.xml  template_for_ploting.xml
ar_detection_ws/: .gitignore  workspace.rosinstall
ar_detection_ws/install/: local_setup.sh  setup.sh
ar_detection_ws/install/detection_package/share/ament_index/resource_index/parent_prefix_path/: detection_package
ar_detection_ws/install/detection_package/share/detection_package/: local_setup.dsv  package.bash  package.dsv  package.sh  package.zsh
ar_detection_ws/log/: latest_build
ar_detection_ws/src/detection_package/: CMakeLists.txt  package.xml
ar_detection_ws/src/detection_package/launch/: _launch.py  complete_launch.py  detection_launch.py  play_with_clock_launch.py  plot_launch.py
ar_detection_ws/src/detection_package/scripts/: aruco_marker_visualizer.py  live_error_plot.py  marker_logger.py  play_with_clock.py  pose_in_world.py
ar_detection_ws/src/pose_tf_broadcaster/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ar_detection_ws/src/pose_tf_broadcaster/launch/: visualization_launch.py
ar_detection_ws/src/pose_tf_broadcaster/pose_tf_broadcaster/: aruco_tf_broadcaster.py  cam_tf_broadcaster.py  optitrack_tf_broadcaster.py
ar_detection_ws/src/pose_tf_broadcaster/scripts/: aruco_tf_broadcaster.py  pose_tf_broadcaster.py
camera_calibration/c922_pro_stream_webcam/: ost.txt  ost.yaml
test_2/: metadata.yaml  test_2_0.mcap
test_3/: metadata.yaml
