<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detection_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ronjonathan.singson@gmail.com">piron</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend> 
  <depend>v4l2_camera</depend>
  <depend>aruco_ros</depend>

  <exec_depend>image_transport_plugins</exec_depend>
  <exec_depend>tf-transformations</exec_depend>
  <depend>aruco_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend> <!-- for launch files -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
